Prevent overflow within main content

--- a/css/vendors.css
+++ b/css/vendors.css
@@ -14876,12 +14876,15 @@ a.usecase__link:hover .usecase__title h3 {
   background: #f5f5f5
 }
 
-#content img {
+#content img,
+#main-content img {
   max-width: 100%
 }
 
 #content figure,
-#content pre {
+#content pre,
+#main-content figure,
+#main-content pre {
   max-width: 100vw;
   overflow-x: scroll;
 }
